--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - '2.7'
   - '3.3'
 before_install:
+  - sudo apt-get update -qq
   - sudo apt-get install software-properties-common
   - sudo add-apt-repository -y ppa:gijzelaar/snap7
   - sudo apt-get update -qq
