--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - sudo add-apt-repository -y ppa:gijzelaar/snap7
   - sudo apt-get update -qq
   - sudo apt-get install snap7-dev snap71
+  - sudo ldconfig
   - pip install -r test/requirements.txt --use-mirrors
 install:
   - python setup.py install
