--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ before_install:
 install:
   - python setup.py install
 script:
+  - sudo nosetests test/test_partner.py
+  - sudo nosetests test/test_server.py
   - nohup sudo /home/travis/virtualenv/python2.7/bin/snap7-server.py &
-  - nosetests
+  - nosetests test/test_client.py
 
 
