--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - sudo apt-get install software-properties-common
   - sudo add-apt-repository -y ppa:gijzelaar/snap7
   - sudo apt-get update -qq
-  - sudo apt-get install snap7-dev snap71
+  - sudo apt-get install libsnap7-dev libsnap71
   - sudo ldconfig
   - pip install -r test/requirements.txt --use-mirrors
 install:
