--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,10 @@ script:
   - sudo /home/travis/virtualenv/python2.7/bin/nosetests test/test_server.py
   - nohup sudo /home/travis/virtualenv/python2.7/bin/snap7-server.py &
   - nosetests test/test_client.py
-
-
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/aacaa796672a51d47850
+    on_success: change
+    on_failure: always
+    on_start: false
