--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,8 @@ before_install:
 install:
   - python setup.py install
 script:
-  - sudo /home/travis/virtualenv/python2.7/bin/nosetests test/test_partner.py
-  - /home/travis/virtualenv/python2.7/bin/nosetests test/test_server.py
-  - nohup /home/travis/virtualenv/python2.7/bin/snap7-server.py &
+  - sudo nosetests test/test_partner.py
+  - bin/nosetests test/test_server.py
   - nosetests test/test_client.py
 notifications:
   webhooks:
