--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_install:
 install:
   - python setup.py install
 script:
-  - sudo nosetests test/test_partner.py
-  - bin/nosetests test/test_server.py
+  - sudo -E nosetests test/test_partner.py
+  - nosetests test/test_server.py
   - nosetests test/test_client.py
 notifications:
   webhooks:
