--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - '2.7'
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install software-properties-common
+  - sudo apt-get install software-properties-common python-nose
   - sudo add-apt-repository -y ppa:gijzelaar/snap7
   - sudo apt-get update -qq
   - sudo apt-get install libsnap7-dev libsnap71
