enable utils tests and also test with python3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 python:
   - '2.7'
+  - '3.4'
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install software-properties-common python-nose
@@ -15,6 +16,7 @@ script:
   - sudo -E nosetests test/test_partner.py
   - nosetests test/test_server.py
   - nosetests test/test_client.py
+  - nosetests test/test_util.py
 notifications:
   webhooks:
     urls:
