--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_install:
   - sudo add-apt-repository -y ppa:gijzelaar/snap7
   - sudo apt-get update -qq
   - sudo apt-get install libsnap7-dev libsnap71
-  - sudo ldconfig
   - pip install -r test/requirements.txt --use-mirrors
+  - pip install codecov
 install:
   - python setup.py install
 script:
@@ -17,6 +17,8 @@ script:
   - nosetests test/test_server.py
   - nosetests test/test_client.py
   - nosetests test/test_util.py
+after_success:
+  - codecov
 notifications:
   webhooks:
     urls:
@@ -24,3 +26,10 @@ notifications:
     on_success: change
     on_failure: always
     on_start: false
+deploy:
+  provider: pypi
+  user: gijzelaerr
+  password:
+    secure: FVgr37xYK0D1Hfag0KVJlsc5m4x1hf+T2vBLAKZWPCYNq2jEIzCGtMLNGmgHBVqydWHM3HkTJTYqlPyguxC/DYnmLSNL4L6YeG1EUWQ4Zgn/IqK55lb0Sns2Qn4moTN/q53Z6vMUMRS4frnycZLa3AETGAedv5qyR92r7yEzAJk=
+  on:
+    tags: true
