--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,52 @@
+matrix:
+  - PYTHON: "C:\\Python27"
+    PYTHON_VERSION: "2.7.x" # currently 2.7.9
+    PYTHON_ARCH: "32"
+
+  - PYTHON: "C:\\Python27-x64"
+    PYTHON_VERSION: "2.7.x" # currently 2.7.9
+    PYTHON_ARCH: "64"
+
+  - PYTHON: "C:\\Python34"
+    PYTHON_VERSION: "3.4.x" # currently 3.4.3
+    PYTHON_ARCH: "32"
+
+  - PYTHON: "C:\\Python34-x64"
+    PYTHON_VERSION: "3.4.x" # currently 3.4.3
+    PYTHON_ARCH: "64"
+
 install:
-  -  pip install -r test/requirements.txt
+  - ECHO "Filesystem root:"
+  - ps: "ls \"C:/\""
+
+  - ECHO "Installed SDKs:"
+  - ps: "ls \"C:/Program Files/Microsoft SDKs/Windows\""
+
+  # Install Python (from the official .msi of http://python.org) and pip when
+  # not already installed.
+  - ps: if (-not(Test-Path($env:PYTHON))) { & appveyor\install.ps1 }
+
+  # Prepend newly installed Python to the PATH of this build (this cannot be
+  # done from inside the powershell script as it would require to restart
+  # the parent CMD process).
+  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+
+  # Check that we have the expected version and architecture for Python
+  - "python --version"
+  - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
+
+  # Upgrade to the latest version of pip to avoid it displaying warnings
+  # about it being out of date.
+  - "pip install --disable-pip-version-check --user --upgrade pip"
+
+  # Install the build dependencies of the project. If some dependencies contain
+  # compiled extensions and are not provided as pre-built wheel packages,
+  # pip will build them from source using the MSVC compiler matching the
+  # target Python version and architecture
+  - "%CMD_IN_ENV% pip install -r test/requirements.txt"
+
+build: false  # Not a C# project, build stuff at the test step instead.
+
 test_script:
   - nosetests
 
