--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,19 +1,21 @@
-matrix:
-  - PYTHON: "C:\\Python27"
-    PYTHON_VERSION: "2.7.x" # currently 2.7.9
-    PYTHON_ARCH: "32"
+environment:
+  matrix:
+    - PYTHON: "C:\\Python27"
+      PYTHON_VERSION: "2.7.x" # currently 2.7.9
+      PYTHON_ARCH: "32"
 
-  - PYTHON: "C:\\Python27-x64"
-    PYTHON_VERSION: "2.7.x" # currently 2.7.9
-    PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Python27-x64"
+      PYTHON_VERSION: "2.7.x" # currently 2.7.9
+      PYTHON_ARCH: "64"
 
-  - PYTHON: "C:\\Python34"
-    PYTHON_VERSION: "3.4.x" # currently 3.4.3
-    PYTHON_ARCH: "32"
+    - PYTHON: "C:\\Python34"
+      PYTHON_VERSION: "3.4.x" # currently 3.4.3
+      PYTHON_ARCH: "32"
 
-  - PYTHON: "C:\\Python34-x64"
-    PYTHON_VERSION: "3.4.x" # currently 3.4.3
-    PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Python34-x64"
+      PYTHON_VERSION: "3.4.x" # currently 3.4.3
+      PYTHON_ARCH: "64"
+
 
 install:
   - ECHO "Filesystem root:"
