--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: python
+sudo: true
+os:
+  - linux
+  - osx
 python:
   - '2.7'
   - '3.4'
+  - '3.5'
+  - '3.6'
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install software-properties-common python-nose
-  - sudo add-apt-repository -y ppa:gijzelaar/snap7
-  - sudo apt-get update -qq
-  - sudo apt-get install libsnap7-dev libsnap71
-  - pip install -r test/requirements.txt --use-mirrors
-  - pip install codecov
+  - .travis/before_install.sh
 install:
   - python setup.py install
 script:
