--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -11,10 +11,7 @@ jobs:
     - name: Install Debian packages
       run: |
         apt-get update -qq
-        apt-get install -y software-properties-common
-        add-apt-repository -y ppa:gijzelaar/snap7
-        apt-get update -qq
-        apt-get install -y libsnap7-dev libsnap7-1 python3-dev
+        apt-get install -y python3-pip
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip
