--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,7 +25,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install .[test]
+        python3 -m pip install --upgrade pip
+        python3 -m pip install .[test]
     - name: Run pytest
       run: pytest
