--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -10,11 +10,11 @@ jobs:
     steps:
     - name: Install Debian packages
       run: |
-        apt-get update -qq
-        apt-get install -y python3-pip
+        sudo apt-get update -qq
+        sudo apt-get install -y python3-pip
     - name: Install dependencies
       run: |
-        python3 -m pip install --upgrade pip
-        python3 -m pip install mypy
+        sudo python3 -m pip install --upgrade pip
+        sudo python3 -m pip install mypy
     - name: Run mypy
       run: mypy snap7 test
