--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,11 +13,11 @@ jobs:
     steps:
     - name: Install Debian packages
       run: |
-        apt-get update -qq
-        apt-get install -y software-properties-common
-        add-apt-repository -y ppa:gijzelaar/snap7
-        apt-get update -qq
-        apt-get install -y libsnap7-dev libsnap7-1
+        sudo apt-get update -qq
+        sudo apt-get install -y software-properties-common
+        sudo add-apt-repository -y ppa:gijzelaar/snap7
+        sudo apt-get update -qq
+        sudo apt-get install -y libsnap7-dev libsnap7-1
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
