--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Install python-snap7
         run: python3 -m pip install .[test]
       - name: Run pytest
-        run: pytest
+        run: |
+          pytest test/test_server.py test/test_client.py test/test_util.py
+          sudo pytest test/test_partner.py
 
 
