--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -6,7 +6,6 @@ on:
     branches: [ master ]
 jobs:
   windows_wheel:
-    continue-on-error: true
     runs-on: windows-2019
     steps:
       - name: Checkout
@@ -17,7 +16,8 @@ jobs:
         run: |
           wget.exe --content-disposition -c https://sourceforge.net/projects/snap7/files/1.4.2/snap7-full-1.4.2.7z/download
           7z x snap7-full-1.4.2.7z
-          Copy-Item snap7-full-1.4.2/release/Windows/Win64/snap7.dll snap7/.
+          Copy-Item snap7-full-1.4.2\release\Windows\Win64\snap7.dll snap7\.
+          Copy-Item snap7-full-1.4.2\release\Windows\Win64\snap7.dll C:\Windows\System32\.
       - name: Upgrade pip and wheel for all pythons
         run:  python.exe -m pip install --upgrade pip wheel
       - name: Install python libraries
