--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: Pytest with all supported pythons
+name: Linux Test all Pythons
 on:
   push:
     branches: [ master ]
@@ -32,7 +32,5 @@ jobs:
       - name: Run pytest
         run: |
           which pytest
-          echo $PATH
-          pytest test/test_server.py test/test_client.py test/test_util.py
-          sudo echo $PATH
-          sudo pytest test/test_partner.py
+          pytest test/test_server.py test/test_client.py test/test_util.py  test/test_client_async.py
+          sudo /opt/hostedtoolcache/Python/${{ matrix.python-version }}*/x64/bin/pytest test/test_partner.py
