Revert "remove partner, since other stuff may happen there"
This reverts commit c236c7f4ede735718b2cbfab1e515b0acbfc86a8.
Revert "Revert test to normal"

This reverts commit d6564c3fbd01f7e5ad53199eb7f37d9fc598b092.
Revert "Add multiple test changes to tackle windows test"

This reverts commit 1da71af2277983b79e55d6f4f49c401bdf44d5b3.

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,12 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install choco packages
-        run: choco install 7zip wget
-      - name: Check python version before
-        run: py --version
-      - run: choco install -y python
-      - name: Check newest version
-        run: py --version
+        run: choco install 7zip wget python
       - name: Get snap7
         run: |
           wget.exe --content-disposition -c https://sourceforge.net/projects/snap7/files/1.4.2/snap7-full-1.4.2.7z/download
@@ -25,8 +20,8 @@ jobs:
           Copy-Item snap7-full-1.4.2\release\Windows\Win64\snap7.dll snap7\.
           Copy-Item snap7-full-1.4.2\release\Windows\Win64\snap7.dll C:\Windows\System32\.
       - name: Upgrade pip and wheel for all pythons
-        run:  py -m pip install --upgrade pip wheel
+        run:  python.exe -m pip install --upgrade pip wheel
       - name: Install python libraries
-        run: py -m pip install .[test]
+        run: python.exe -m pip install .[test]
       - name: Run tests
-        run: py -m pytest test/test_client.py test/test_util.py
+        run: pytest.exe  test/test_client.py test/test_util.py test/test_partner.py
