--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Run pytest
         run: |
           which pytest
-          pytest test/test_server.py test/test_client.py test/test_util.py
+          pytest test/test_server.py test/test_client.py test/test_util.py test/test_client_async.py
           sudo /opt/hostedtoolcache/Python/${{ matrix.python-version }}*/x64/bin/pytest test/test_partner.py
