--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -8,20 +8,37 @@ jobs:
   windows_wheel:
     continue-on-error: true
     runs-on: windows-2019
+    strategy:
+      matrix:
+        python-version: [3.6.8, 3.7.9, 3.8.8, 3.9.2]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Install choco packages
-        run: choco install 7zip wget python
+        run:
+           choco install 7zip wget
+           choco install --version ${{ matrix.python-version }} python
+
       - name: Get snap7
         run: |
           wget.exe -O snap7-full-1.4.2.7z --content-disposition -c https://sourceforge.net/projects/snap7/files/1.4.2/snap7-full-1.4.2.7z/download
           7z x snap7-full-1.4.2.7z
           Copy-Item snap7-full-1.4.2\release\Windows\Win64\snap7.dll snap7\.
-          Copy-Item snap7-full-1.4.2\release\Windows\Win64\snap7.dll C:\Windows\System32\.
+
       - name: Upgrade pip and wheel for all pythons
         run:  python.exe -m pip install --upgrade pip wheel
+
       - name: Install python libraries
         run: python.exe -m pip install .[test]
+
       - name: Run tests
-        run: pytest.exe  test/test_client.py test/test_util.py test/test_partner.py
+        run: pytest.exe test/test_client.py test/test_util.py test/test_partner.py
+
+      - name: Run binary wheel
+        run: python.exe setup.py bdist_wheel
+
+      - uses: actions/upload-artifact@v2
+        name: Publish Windows binary wheels
+        with:
+          path: dist/*.whl
