--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -13,7 +13,10 @@ jobs:
       - name: Install Debian packages
         run: |
           sudo apt-get update -qq
-          sudo apt-get install -y python3-pip make
+          sudo apt-get install -y software-properties-common python3-pip make
+          sudo add-apt-repository -y ppa:gijzelaar/snap7
+          sudo apt-get update -qq
+          sudo apt-get install -y libsnap7-dev libsnap7-1
       - name: Install dependencies
         run: |
           sudo python3 -m pip install --upgrade pip
