--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,7 +12,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install choco packages
-        run: choco install 7zip wget python
+        run: |
+          choco install 7zip python
+          choco install --allow-downgrade wget --version 1.20.3.20190531
       - name: Get snap7
         run: |
           wget.exe -O snap7-full-1.4.2.7z --content-disposition -c https://sourceforge.net/projects/snap7/files/1.4.2/snap7-full-1.4.2.7z/download
