--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -92,6 +92,7 @@ jobs:
         env:
           CIBW_BUILD: cp36-manylinux_x86_64
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
+          CIBW_ENVIRONMENT: "BUILD_WHEEL_WITH_EXTENSION=1"
           CIBW_BEFORE_ALL_LINUX: cd snap7-full-1.4.2/build/unix/;make -f x86_64_linux.mk install
 
       - name: Repack wheel
@@ -147,8 +148,8 @@ jobs:
           python3 -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_BUILD: cp36-macosx_x86_64
-          CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
           CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: "BUILD_WHEEL_WITH_EXTENSION=1"
 
       - name: Repack wheel
         run: |
