wget version downgrade 1.20.3.20190531

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -16,7 +16,8 @@ jobs:
 
       - name: Install choco packages
         run: |
-          choco install 7zip python wget
+          choco install 7zip python
+          choco install --allow-downgrade wget --version 1.20.3.20190531
 
       - name: Cache snap7-archive
         id: snap7-archive
